--- a/src/app/gifs/resultados/resultados.component.html
+++ b/src/app/gifs/resultados/resultados.component.html
@@ -1,3 +1,15 @@
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, vel? Error illum dolores ipsum ex deleniti
-nihil enim? Nisi cum sit laudantium fugiat repellendus itaque aliquam dolore id recusandae ex.
+<div class="row">
+    <div *ngFor="let gif of resultados" class="col-md-4 col-sm-6 animate__animated animate__fadeIn">
+        <div class="card">
+            <img [src]="gif.images.downsized_medium.url"
+                [alt]="gif.title"
+                class="card-img-top"
+                >
+            <div class="card-body">
+                <p class="card-text">
+                    {{gif.title}}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
