--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,7 +7,8 @@
     <hr class="text-white">
 
     <div class="list-group list-reset">
-        <a *ngFor="let item of historial; " href="#" 
+        <a *ngFor="let item of historial; " href="#"
+        (click)="buscar(item)"
         class="list-group-item list-group-item-action ">
             <!-- EL PIPE "TUBERIA" TITLECASE CAPITALIZA -->
             {{item | titlecase }}
