sistema de rutas
sistema de rutas

--- a/src/app/gifs/gifs-page/gifs-page.component.html
+++ b/src/app/gifs/gifs-page/gifs-page.component.html
@@ -1,7 +1,7 @@
 <div class="row p-3">
 
     <app-busqueda class="col"></app-busqueda>
-    <p class="col-3 btn btn-danger" style="cursor:none; margin-top: 1.9rem!important;">Jorge Luis Flores Assad</p>
+    <p class="col-3 btn btn-danger ocultar" style="cursor:none; margin-top: 1.9rem!important;">Jorge Luis Flores Assad</p>
 
 </div>
 
