--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="d-flex">
-  
-  <app-sidebar></app-sidebar>
-  
-  <app-gifs-page class="container"></app-gifs-page>
-  
-</div>
+<router-outlet></router-outlet>
